--- a/src/pages/auth.module.scss
+++ b/src/pages/auth.module.scss
@@ -1,7 +1,7 @@
 // signIn, signUp style
 
-@use "../styles/mixins" as m;
-@use "../styles/constants" as c;
+@use '../styles/mixins' as m;
+@use '../styles/constants' as c;
 
 .wrap {
   @include m.flex(center, center, column);
