--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,7 +1,7 @@
 *,
 *:after,
 *:before {
-  font-family: "Nanum Square Round";
+  font-family: 'Nanum Square Round';
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -14,9 +14,9 @@ a:visited {
 body,
 textarea,
 button {
-  font-family: "Nanum Square Round", "Spoqa Hans Sans Neo", "Spoqa Han Sans",
+  font-family: 'Nanum Square Round', 'Spoqa Hans Sans Neo', 'Spoqa Han Sans',
     Spoqa Han Sans JP, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    "Helvetica Neue", Helvetica, Arial, sans-serif;
+    'Helvetica Neue', Helvetica, Arial, sans-serif;
   padding: 0;
   margin: 0;
   -webkit-font-smoothing: antialiased;
@@ -36,7 +36,7 @@ input:-webkit-autofill:active {
 
 a {
   text-decoration: none;
-  font-family: "Nanum Square Round", "Spoqa Hans Sans Neo", "Spoqa Han Sans";
+  font-family: 'Nanum Square Round', 'Spoqa Hans Sans Neo', 'Spoqa Han Sans';
 
   &:hover {
     text-decoration: none;
@@ -69,12 +69,12 @@ ol {
 }
 
 pre {
-  font-family: "Nanum Square Round", "Spoqa Hans Sans Neo", "Spoqa Han Sans";
+  font-family: 'Nanum Square Round', 'Spoqa Hans Sans Neo', 'Spoqa Han Sans';
 }
 
 textarea {
   resize: none;
-  font-family: "Nanum Square Round", "Spoqa Hans Sans Neo", "Spoqa Han Sans",
+  font-family: 'Nanum Square Round', 'Spoqa Hans Sans Neo', 'Spoqa Han Sans',
     Spoqa Han Sans JP, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    "Helvetica Neue", Helvetica, Arial, sans-serif;
+    'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
